--- a/Java/Spring/workspace-spring-tool-suite-4-4.5.0.RELEASE/cursomv/src/main/resources/application.properties
+++ b/Java/Spring/workspace-spring-tool-suite-4-4.5.0.RELEASE/cursomv/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=${port:8081}
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.show-sql=true
+spring.datasource.data-username=sa
+spring.datasource.data-password=
